# storage/api-docs/api-docs.json
@@ -926,7 +926,28 @@
                         "name": "User-Agent",
                         "type": "string"
                     }
-                ]
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                }
+                            },
+                            "example": {
+                                "email": "adama@gmail.com",
+                                "password": "password"
+                            }
+                        }
+                    }
+                }
             }
         }
     }
